# JamBuddy

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
src/: __init__.py  config.py  pipeline.py
src/accompaniment/: __init__.py  interface.py  markov_ai.py  realjam_adapter.py  rule_based.py
src/audio_io/: __init__.py  stream.py
src/lines/: __init__.py  interface.py  rule_based.py
src/perception/: __init__.py  interface.py  lightweight.py
src/render/: __init__.py  fluidsynth_render.py
